--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -1961,6 +1961,9 @@
     <ClCompile Include="..\source\client\renderer\LavaTexture.cpp">
       <Filter>source\client\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\client\renderer\LavaSideTexture.cpp">
+      <Filter>source\client\renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\thirdparty\raknet\CMakeLists.txt">
