* Add PatchManager - Allows you to patch terrain.png and items.png on the fly.
This can be used for modding, since you don't need to share copyrighted Mojang assets alongside your texture patches.

--- a/.gitignore
+++ b/.gitignore
@@ -401,6 +401,9 @@ FodyWeavers.xsd
 /game/assets/particles.png
 /game/assets/terrain.png
 
+# Avoid including Minecraft Classic assets from Mojang, for now.
+/game/assets/patches/*.png
+
 # Ignore keep directory - where you can keep files for later use
 /keep
 
