* Allow overwriting of frame data from the patch data file.

--- a/.gitignore
+++ b/.gitignore
@@ -403,6 +403,7 @@ FodyWeavers.xsd
 
 # Avoid including Minecraft Classic assets from Mojang, for now.
 /game/assets/patches/*.png
+/game/assets/patches/classic/*.png
 
 # Ignore keep directory - where you can keep files for later use
 /keep
