* Split every Tile class into its own header file.

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -173,7 +173,44 @@
     <ClInclude Include="..\source\world\level\TickNextTickData.hpp" />
     <ClInclude Include="..\source\world\particle\Particle.hpp" />
     <ClInclude Include="..\source\world\particle\ParticleEngine.hpp" />
+    <ClInclude Include="..\source\world\tile\BookshelfTile.hpp" />
+    <ClInclude Include="..\source\world\tile\Bush.hpp" />
+    <ClInclude Include="..\source\world\tile\ClayTile.hpp" />
+    <ClInclude Include="..\source\world\tile\ClothTile.hpp" />
+    <ClInclude Include="..\source\world\tile\DirtTile.hpp" />
+    <ClInclude Include="..\source\world\tile\DoorTile.hpp" />
+    <ClInclude Include="..\source\world\tile\FarmTile.hpp" />
+    <ClInclude Include="..\source\world\tile\FireTile.hpp" />
+    <ClInclude Include="..\source\world\tile\GlassTile.hpp" />
+    <ClInclude Include="..\source\world\tile\GrassTile.hpp" />
+    <ClInclude Include="..\source\world\tile\GravelTile.hpp" />
+    <ClInclude Include="..\source\world\tile\HalfTransparentTile.hpp" />
+    <ClInclude Include="..\source\world\tile\IceTile.hpp" />
+    <ClInclude Include="..\source\world\tile\InvisibleTile.hpp" />
+    <ClInclude Include="..\source\world\tile\LadderTile.hpp" />
+    <ClInclude Include="..\source\world\tile\LeafTile.hpp" />
+    <ClInclude Include="..\source\world\tile\LiquidTile.hpp" />
+    <ClInclude Include="..\source\world\tile\LiquidTileDynamic.hpp" />
+    <ClInclude Include="..\source\world\tile\LiquidTileStatic.hpp" />
+    <ClInclude Include="..\source\world\tile\MetalTile.hpp" />
+    <ClInclude Include="..\source\world\tile\ObsidianTile.hpp" />
+    <ClInclude Include="..\source\world\tile\OreTile.hpp" />
+    <ClInclude Include="..\source\world\tile\RedStoneOreTile.hpp" />
+    <ClInclude Include="..\source\world\tile\ReedTile.hpp" />
+    <ClInclude Include="..\source\world\tile\SandStoneTile.hpp" />
+    <ClInclude Include="..\source\world\tile\SandTile.hpp" />
+    <ClInclude Include="..\source\world\tile\Sapling.hpp" />
+    <ClInclude Include="..\source\world\tile\SpongeTile.hpp" />
+    <ClInclude Include="..\source\world\tile\StairTile.hpp" />
+    <ClInclude Include="..\source\world\tile\StoneSlabTile.hpp" />
+    <ClInclude Include="..\source\world\tile\StoneTile.hpp" />
     <ClInclude Include="..\source\world\tile\Tile.hpp" />
+    <ClInclude Include="..\source\world\tile\TntTile.hpp" />
+    <ClInclude Include="..\source\world\tile\TopSnowTile.hpp" />
+    <ClInclude Include="..\source\world\tile\TorchTile.hpp" />
+    <ClInclude Include="..\source\world\tile\TransparentTile.hpp" />
+    <ClInclude Include="..\source\world\tile\TreeTile.hpp" />
+    <ClInclude Include="..\source\world\tile\WireTile.hpp" />
     <ClInclude Include="..\thirdparty\raknet\AutopatcherPatchContext.h" />
     <ClInclude Include="..\thirdparty\raknet\AutopatcherRepositoryInterface.h" />
     <ClInclude Include="..\thirdparty\raknet\Base64Encoder.h" />
@@ -543,6 +580,7 @@
     <ClCompile Include="..\source\world\tile\TorchTile.cpp" />
     <ClCompile Include="..\source\world\tile\TransparentTile.cpp" />
     <ClCompile Include="..\source\world\tile\TreeTile.cpp" />
+    <ClCompile Include="..\source\world\tile\WireTile.cpp" />
     <ClCompile Include="..\thirdparty\raknet\Base64Encoder.cpp" />
     <ClCompile Include="..\thirdparty\raknet\BitStream.cpp" />
     <ClCompile Include="..\thirdparty\raknet\CCRakNetSlidingWindow.cpp" />
