--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -365,6 +365,17 @@
     <ClInclude Include="..\thirdparty\raknet\WSAStartupSingleton.h" />
     <ClInclude Include="..\thirdparty\raknet\XBox360Includes.h" />
     <ClInclude Include="..\thirdparty\raknet\_FindFirst.h" />
+    <ClInclude Include="..\thirdparty\zlib\crc32.h" />
+    <ClInclude Include="..\thirdparty\zlib\deflate.h" />
+    <ClInclude Include="..\thirdparty\zlib\gzguts.h" />
+    <ClInclude Include="..\thirdparty\zlib\inffast.h" />
+    <ClInclude Include="..\thirdparty\zlib\inffixed.h" />
+    <ClInclude Include="..\thirdparty\zlib\inflate.h" />
+    <ClInclude Include="..\thirdparty\zlib\inftrees.h" />
+    <ClInclude Include="..\thirdparty\zlib\trees.h" />
+    <ClInclude Include="..\thirdparty\zlib\zconf.h" />
+    <ClInclude Include="..\thirdparty\zlib\zlib.h" />
+    <ClInclude Include="..\thirdparty\zlib\zutil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\compat\GLExt.cpp" />
@@ -692,6 +703,21 @@
     <ClCompile Include="..\thirdparty\raknet\WSAStartupSingleton.cpp" />
     <ClCompile Include="..\thirdparty\raknet\_FindFirst.cpp" />
     <ClCompile Include="..\thirdparty\stb_image_impl.c" />
+    <ClCompile Include="..\thirdparty\zlib\adler32.c" />
+    <ClCompile Include="..\thirdparty\zlib\compress.c" />
+    <ClCompile Include="..\thirdparty\zlib\crc32.c" />
+    <ClCompile Include="..\thirdparty\zlib\deflate.c" />
+    <ClCompile Include="..\thirdparty\zlib\gzclose.c" />
+    <ClCompile Include="..\thirdparty\zlib\gzlib.c" />
+    <ClCompile Include="..\thirdparty\zlib\gzread.c" />
+    <ClCompile Include="..\thirdparty\zlib\gzwrite.c" />
+    <ClCompile Include="..\thirdparty\zlib\infback.c" />
+    <ClCompile Include="..\thirdparty\zlib\inffast.c" />
+    <ClCompile Include="..\thirdparty\zlib\inflate.c" />
+    <ClCompile Include="..\thirdparty\zlib\inftrees.c" />
+    <ClCompile Include="..\thirdparty\zlib\trees.c" />
+    <ClCompile Include="..\thirdparty\zlib\uncompr.c" />
+    <ClCompile Include="..\thirdparty\zlib\zutil.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\thirdparty\raknet\CMakeLists.txt" />
