* Improve the level sending mechanism in the game.
Instead of sending a request for each chunk one by one, and in sequence, send all the level data in one block.

I know this is not the best solution since we are working with UDP here, but it's way faster than loading the level chunk by chunk. In a blink of an eye, the level has already loaded.

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -433,6 +433,7 @@
     <ClCompile Include="..\source\client\network\NetEventCallback.cpp" />
     <ClCompile Include="..\source\client\network\packets\AddPlayerPacket.cpp" />
     <ClCompile Include="..\source\client\network\packets\ChunkDataPacket.cpp" />
+    <ClCompile Include="..\source\client\network\packets\LevelDataPacket.cpp" />
     <ClCompile Include="..\source\client\network\packets\LoginPacket.cpp" />
     <ClCompile Include="..\source\client\network\packets\MessagePacket.cpp" />
     <ClCompile Include="..\source\client\network\packets\MovePlayerPacket.cpp" />
